# open_silicon_bazel

./: .bazelrc  README.md  WORKSPACE
dependency_support/: cmake_substitution.bzl  initialize_external.bzl  load_external.bzl  pip_requirements.txt  pseudo_configure.bzl
dependency_support/boost/: workspace.bzl
dependency_support/com_bcanalog_bag/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_bcanalog_cbag/: bundled.BUILD.bazel  clang.patch  workspace.bzl
dependency_support/com_bcanalog_cbag_polygon/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_bcanalog_pybag/: bundled.BUILD.bazel  exclude_oa.patch  workspace.bzl
dependency_support/com_bcanalog_xbase/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_github_fmtlib_fmt/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_github_gabime_spdlog/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_github_pkerichang_pybind11_generics/: bundled.BUILD.bazel  clang.patch  workspace.bzl
dependency_support/com_github_westes_flex/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_google_skywater_pdk/: bundled.BUILD.bazel  cell_libraries.bzl  declare_cell_library.bzl  workspace.bzl
dependency_support/com_opencircuitdesign_magic/: bundled.BUILD.bazel  workspace.bzl
dependency_support/com_opencircuitdesign_netgen/: workspace.bzl
dependency_support/edu_tamu_suitesparse/: bundled.BUILD.bazel  workspace.bzl
dependency_support/gov_sandia_xyce/: BUILD  Xyce_config.h  bundled.BUILD.bazel  bundled_regression.BUILD.bazel  cxx17.patch  run_regression_tests.sh  static_init.patch  streambuf.patch  workspace.bzl
dependency_support/lapack/: BUILD
dependency_support/net_invisible_island_ncurses/: bundled.BUILD.bazel
dependency_support/net_sourceforge_ngspice/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_fftw/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_gnu_bison/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_gnu_m4/: bundled.BUILD.bazel  workspace.bzl
dependency_support/org_gnu_readline/: bundled.BUILD.bazel  missing_include.patch  workspace.bzl
dependency_support/org_netlib_lapack/: bundled.BUILD.bazel  flang.BUILD.bazel  workspace.bzl
dependency_support/org_trilinos/: bundled.BUILD.bazel  cxx17.patch  workspace.bzl
dependency_support/org_tuxfamily_eigen/: bundled.BUILD.bazel  workspace.bzl
dependency_support/pybind11/: initialize.bzl  pybind11.bzl  workspace.bzl
dependency_support/tk_tcl_tcl/: workspace.bzl
dependency_support/zlib/: bundled.BUILD.bazel  workspace.bzl
