# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_open_silicon_bazel_pip_deps//:requirements.bzl", "requirement")

licenses(["notice"])

py_library(
    name = "bag",
    srcs = glob(["src/**/*.py"]),
    visibility = ["//visibility:public"],
    imports = ["src"],
    deps = [
        "@com_bcanalog_pybag//:pybag",
        requirement("h5py"),
        requirement("Jinja2"),
        requirement("lark-parser"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pyzmq"),
        requirement("ruamel.yaml"),
        requirement("scipy"),
        requirement("sortedcontainers"),
    ],
)
