# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "cbag",
    srcs = glob([
        "src/**/*.cpp",
    ], exclude = ["src/cbag/oa/*.cpp"]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    includes = ["include"],
    deps = [
        "@boost//:filesystem",
        "@boost//:geometry",
        "@boost//:locale",
        "@boost//:spirit",
        "@boost//:tti",
        "@boost//:units",
        "@com_bcanalog_cbag_polygon//:cbag_polygon",
        "@com_github_fmtlib_fmt//:fmt",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp",
    ],
)
