# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@com_google_open_silicon_bazel//dependency_support/pybind11:pybind11.bzl", "pybind_extension_and_library")

licenses(["notice"])

pybind_extension_and_library(
    name = "pybag",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.h",
    ], exclude = [
        "src/pybag/oa.cpp",
    ]),
    includes = ["src"],
    deps = [
        "@com_bcanalog_cbag//:cbag",
        "@com_github_fmtlib_fmt//:fmt",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp",
        "@com_github_pkerichang_pybind11_generics//:pybind11_generics",
    ],
)
